all referees' comments projected into text
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9862 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -36,7 +36,7 @@
 
 \begin{frontmatter}
 
-\title{Evidence for Non-Exponential Elastic Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM at the CERN LHC}
+\title{Evidence for Non-Exponential Elastic Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM at the CERN LHC \todo{proton}}
 
 \input authorlist_npb
 
@@ -46,15 +46,15 @@
 \begin{abstract}
 The TOTEM experiment has made a high-precision measurement of the elastic 
 proton-proton differential cross-section at the centre-of-mass energy 
-$\sqrt s = 8\un{TeV}$ based on a new high-statistics data sample obtained with 
+$\sqrt s = 8\un{TeV}$ based on a new \todo{remove} high-statistics data sample obtained with 
 the $\beta^* = 90\un{m}$ optics. 
-Both statistical and systematic uncertainties remain below $1\un{\%}$, except 
-the contribution from the overall normalisation which was obtained from 
-another data set. This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$. Consequently, the extrapolation to $t=0$ is reviewed, and two extended parameterisations are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
+Both statistical and systematic uncertainties remain below $1\un{\%}$, except for
+the contribution from the overall normalisation \todo{which was obtained from 
+another data set}. This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$. \todo{too big logical step} Consequently, the extrapolation to $t=0$ is reviewed, and two extended parameterisations are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
 \end{abstract}
 
 \begin{keyword}
-elastic scattering \sep total cross-section \sep LHC \sep TOTEM
+\todo{proton} \sep elastic scattering \sep total cross-section \sep LHC \sep TOTEM
 \PACS 13.60.Hb % Total and inclusive cross sections (including deep-inelastic processes)
 %\preprint{CERN-PH-EP-2014-XXXX}
 \end{keyword}
@@ -72,26 +72,7 @@ elastic scattering \sep total cross-section \sep LHC \sep TOTEM
 
 \input results
 
-%--------------------------------------------------
-
-\section{Conclusions and Outlook}
-%
-Thanks to a very-high statistics data set
-%and an improved analysis technique,
-TOTEM has experimentally excluded a purely exponential differential 
-cross-section for elastic proton-proton scattering with more than $7\,\sigma$
-in the $|t|$ range from 0.027 to 0.2\,GeV$^{2}$ at $\sqrt{s}=8\,$TeV. The data
-are described satisfactorily with an exponent linear or quadratic in $t$.
-Using this refined parameterisation for the extrapolation to the optical point,
-$t = 0$, yields a total cross-section compatible with the previous measurement.
-
-In the next article~\cite{1km}, this proof of non-exponentiality in a 
-$t$-domain strongly
-dominated by hadronic interactions will be combined with a measurement of 
-elastic scattering in the Coulomb-nuclear interference region, providing strong
-constraints on the phenomenological description of the hadronic phase and of 
-the interference mechanism.
-
+\input conclusion
 
 %--------------------------------------------------
 
