--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -5,8 +5,10 @@ The differential cross-section $\d \sigma/\d t$ of nuclear proton-%\linebreak
 scattering at low $|t|$ has traditionally been parameterised with a simple 
 exponential function, ${\rm e}^{-B |t|}$, giving a satisfactory description of 
 all past experimental data.
-Note however, that a few publications have already reported about hints at 
-slight deviations from this simple behaviour. At the ISR, for $\sqrt{s}$ 
+Note however, that
+\todo{alternative: Nonetheless, }
+a few publications have already reported about hints of
+slight deviations from this behaviour. At the ISR, for $\sqrt{s}$ 
 between 21.5\,GeV and 52.8\,GeV, elastic pp and partly $\rm\bar{p}$p data have shown a 
 change of slope~\cite{plb39,plb115} or have been better parameterised with quadratic 
 exponential functions, ${\rm e}^{-B |t|-C t^2}$~\cite{npb141,npb248}. 
