--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -1,28 +1,43 @@
+\newpage
+
 %----------------------------------------------------------------------------------------------------
 \section{Results}
 
+%--------------------------------------------------
+% the results drawn from the optimised binning
 
 \begin{figure}
 \begin{center}
 \includegraphics{fig/t_dist.pdf}
 \caption{%
-\todo{``optimised'' binning}
+Differential cross-section using ``optimised'' binning, as given in Table~\ref{tab:data}.
 }
 \label{fig:data ob}
 \end{center}
 \end{figure}
 
-% --- the results drawn from the optimised binning
 
-\todo{add description of fit-quality measures, results in tables}
+The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and Figure \ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential. This plot immediately suggests a non-exponentiality of the data -- pure exponentials would look as (alomost) linear functions in this reference frame.
 
-The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data}. Since it exhibits an exponential-like fall-off, for visualisation purposes, it is preferable to plot the relative difference of the cross-section from a reference exponential, % subtracting the main component
-see Figure~\ref{fig:data rel ob}. This plot immediately suggests a non-exponentiality of the data. To quantify this observation, a series of fits has been made using this parametrisation \todo{comment: physics meaning or simply some math}:
+To study the detailed behaviour of the differential cross-section, a series of fits has been made using parametrisation:
 \begin{equation}
-\label{fit param}
-{\d\sigma\over\d t}(t) = \left. \d\sigma\over\d t\right|_{0} \ \exp\left( \sum\limits_{i = 1}^{N_{b}} b_i\, t^i \right) \:.
+\label{eq:fit param}
+{\d\sigma\over\d t}(t) = \left. \d\sigma\over\d t\right|_{0} \ \exp\left( \sum\limits_{i = 1}^{N_{b}} b_i\, t^i \right) \ ,
 \end{equation}
-\todo{rephrase} The fits have been performed by minimising the standard $\chi^2$ with the covariance matrix given by the sum of the statistical and systematic components. The fit results are shown in Figure~\ref{fig:data rel ob}, clearly indicating that the purely-exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance. The other two fits present very reasonable p-values and can, therefore, be used for a total cross-section estimation with the optical theorem in the form
+which includes both pure exponentail ($N_b = 1$) and its straight-forward extensions ($N_b = 2, 3, \ldots$).
+
+The fits have been performed by minimising the standard $\chi^2$:
+\begin{equation}
+\label{eq:chi sq}
+\chi^2 = \Delta^\T \mat V^{-1} \Delta\ ,\quad \Delta = (\hbox{data} - \hbox{fit})\ ,\quad \mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
+\end{equation}
+where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table ~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty from Table ~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm stat}$ (see Eq.~(\ref{eq:covar mat})).
+
+The quality of fits is juged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Then, p-value stands for probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Eventually, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
+
+Figure~\ref{fig:data rel ob} shows several fits of the differential cross-section with the parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent, $N_b$. The corresponding fit quality is given in Table~\ref{tab:fits ob}, clearly indicating that the purely-exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance.
+%
+The other two fits ($N_b = 2, 3$) are of reasonable quality and can, therefore, be used for a total cross-section estimation with the optical theorem in the form
 \begin{equation}
 \label{eq:si tot}
 \sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,
@@ -37,26 +52,27 @@ for the first time using a non-exponential extrapolation to $t=0$. Using the COM
 \end{equation}
 which are well compatible with the previous measurement using the luminosity-independent method~\cite{prl111}.
 
-
-
-
-% --- results from per-mille binning
-
-The incompatibility between a pure exponential behaviour and the data with the ``per-mille'' binning can be shown equally well. However, since the number of points is drastically increased, the $\chi^2$ test does not have sufficient sensitivity, and a different test is used. Assuming that the data can be described by a pure exponential, the fit parameters should have compatible values for fits over different ranges. Such fits are shown in Figure~\ref{fig:data rel cpb0.001}, for regions below and above $|t| = 0.07\un{GeV^2}$. Although the overall fit quality is satisfactory, the difference in fit parameters excludes their compatibility at $7.7\un{\sigma}$. This, in turn, rules out the assumption, the hypothesis of a purely exponential behaviour of the data.
-\todo{this test is binning-independent}
-
-\iffalse
-	split details
-                A = 529.299 +- 21.951
-                B1 = -19.678 +- 0.074
-                B2 = 514.681 +- 21.953
-                B3 = -19.264 +- 0.057
-
- A1 − A2 = 14.617 ± 1.789 ⇒ 8.2 σ
- B1 − B2 = −0.414 ± 0.056 ⇒ 7.4 σ
-\fi
-
-
+\begin{table}
+\caption{%
+Fit quality measures for fits in Figure~\ref{fig:data rel ob}.
+}
+\vskip-2mm
+\label{tab:fits ob}
+\begin{center}
+\small
+\begin{tabular}{cccc}
+\hline
+\hline
+$N_b$ & $\chi^2/\hbox{ndf}$ & p-value & significance\cr
+\hline
+$1$ & $117.5/28 = 4.20$ & $6.1\cdot 10^{-13}$ & $7.2\un{\sigma}$ \cr
+$2$ & $29.3/27 = 1.09$ & $0.35$ & $0.94\un{\sigma}$ \cr
+$3$ & $25.5/26 = 0.98$ & $0.49$ & $0.69\un{\sigma}$ \cr
+\hline
+\hline
+\end{tabular}
+\end{center}
+\end{table}
 
 
 \begin{figure*}
@@ -65,14 +81,44 @@ The incompatibility between a pure exponential behaviour and the data with the `
 \includegraphics{fig/t_dist_rel_with_fits.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The coloured lines correspond to fits with parametrisation Eq.~(\ref{fit param}). The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit.
-%
-Various fit-quality measures are given in the legend, starting with the $\chi^2$ value after minimisation divided by the number of degrees of freedom (ndf). P-value: probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Significance: half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value.
+Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit.
 }
 \label{fig:data rel ob}
 \end{center}
 \vskip-2mm
 \end{figure*}
+
+
+%--------------------------------------------------
+% results from per-mille binning
+
+The incompatibility between a pure-exponential behaviour and the data with the ``per-mille'' binning can be shown equally well. However, since the number of points is drastically increased, the straight-forward $\chi^2$ test does not have sufficient sensitivity, and a different test is used. Assuming that the data can be described by a pure exponential, the fit parameters should have compatible values for fits over different ranges. Figure~\ref{fig:data rel cpb0.001} shows a fit with parameterisation \todo{chi sq fit}
+\begin{equation}
+\label{eq:split fit param}
+{\d\sigma\over\d t}(t) =
+\begin{cases}
+a_1\, \e^{b_1 |t|} & |t| < 0.07\un{GeV^2}\\
+a_2\, \e^{b_2 |t|} & |t| > 0.07\un{GeV^2}\\
+\end{cases}
+\end{equation}
+giving a reasonable fit quality (p-value of 0.57). The compatibility of the parameters in the two $|t|$ regions can be verified by evaluating \todo{p subscript ??}
+\begin{equation}
+\label{eq:chi sq param}
+\chi^2 = \Delta^\T \mat V^{-1} \Delta\ ,\quad \Delta =
+\begin{pmatrix}
+a_1 - a_2\\
+b_1 - b_2\\
+\end{pmatrix}\ ,
+\end{equation}
+where $\mat V$ is the uncertainty matrix for the difference vector $\Delta$. It yields $\chi^2 = 65.4$ which with $2$ degrees of freedom corresponds to a p-value of $6.2\cdot10^{-15}$ and a significance of $7.8\un{\sigma}$. This, in turn, rules out the hypothesis of a purely exponential behaviour of the data.
+
+
+\iffalse
+ A1 − A2 = 14.617 ± 1.789 ⇒ 8.2 σ
+ B1 − B2 = −0.414 ± 0.056 ⇒ 7.4 σ
+\fi
+
+\todo{this test is binning-independent, show results for ob, ob-sc}
 
 
 
@@ -81,7 +127,7 @@ Various fit-quality measures are given in the legend, starting with the $\chi^2$
 \includegraphics{fig/t_dist_rel_with_split_fit.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The green line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$.
+Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The green line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$, see Eq.~(\ref{eq:split fit param}).
 }
 \label{fig:data rel cpb0.001}
 \end{center}
