few more TODOs removed
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9866 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -5,9 +5,7 @@ The differential cross-section $\d \sigma/\d t$ of nuclear proton-%\linebreak
 scattering at low $|t|$ has traditionally been parameterised with a simple 
 exponential function, ${\rm e}^{-B |t|}$, giving a satisfactory description of 
 all past experimental data.
-Note however, that
-\todo{alternative: Nonetheless, }
-a few publications have already reported about hints of
+Nonetheless, a few publications have already reported about hints of
 slight deviations from this behaviour. At the ISR, for $\sqrt{s}$ 
 between 21.5\,GeV and 52.8\,GeV, elastic pp and partly $\rm\bar{p}$p data have shown a 
 change of slope~\cite{plb39,plb115} or have been better parameterised with quadratic 
