--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -18,7 +18,7 @@
 \def\vec#1{\mathbf{#1}}
 \def\mat#1{\mathsf{#1}}
 \def\etal{et al.}
-\def\todo#1{{\color{red} #1}}
+\def\todo#1{{\color{red}TODO: #1}}
 
 \setbox123\hbox{$0$}
 \setbox124\hbox{$.$}
@@ -36,7 +36,7 @@
 
 \begin{frontmatter}
 
-\title{Evidence for Non-Exponential Elastic Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM at the CERN LHC \todo{proton}}
+\title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM at the CERN LHC}
 
 \input authorlist_npb
 
@@ -46,15 +46,17 @@
 \begin{abstract}
 The TOTEM experiment has made a high-precision measurement of the elastic 
 proton-proton differential cross-section at the centre-of-mass energy 
-$\sqrt s = 8\un{TeV}$ based on a new \todo{remove} high-statistics data sample obtained with 
+$\sqrt s = 8\un{TeV}$ based on a high-statistics data sample obtained with 
 the $\beta^* = 90\un{m}$ optics. 
-Both statistical and systematic uncertainties remain below $1\un{\%}$, except for
-the contribution from the overall normalisation \todo{which was obtained from 
-another data set}. This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$. \todo{too big logical step} Consequently, the extrapolation to $t=0$ is reviewed, and two extended parameterisations are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
+Both statistical and systematic uncertainties remain below $1\un{\%}$ (except for the contribution from the overall normalisation). This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$.
+%
+Two extended paramterisations, with linear and quadratic polynomials in the exponent, are shown to be well compatible with the data. Using them for differential cross-section extrapolation to $t=0$, 
+%Consequently, the extrapolation to $t=0$ is reviewed, and two extended parameterisations are presented,
+yields via the Optical Theorem total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
 \end{abstract}
 
 \begin{keyword}
-\todo{proton} \sep elastic scattering \sep total cross-section \sep LHC \sep TOTEM
+elastic proton-proton scattering \sep total cross-section \sep LHC \sep TOTEM
 \PACS 13.60.Hb % Total and inclusive cross sections (including deep-inelastic processes)
 %\preprint{CERN-PH-EP-2014-XXXX}
 \end{keyword}
