after spell check
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9869 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/conclusion.tex
+++ b/2014/90m paper/conclusion.tex
@@ -6,14 +6,13 @@ Thanks to a very-high statistics data set TOTEM has excluded a purely exponentia
 cross-section for elastic proton-proton scattering with significance greater than $7\,\sigma$
 in the $|t|$ range from 0.027 to 0.2\,GeV$^{2}$ at $\sqrt{s}=8\,$TeV. The data
 are described satisfactorily with an exponent linear or quadratic in $t$.
-Using this refined parameterisation for the extrapolation to the optical point,
+Using this refined parametrisation for the extrapolation to the optical point,
 $t = 0$, yields a total cross-section compatible with the previous measurement.
 
-\todo{soften, the other paper will come later}
-In the next article~\cite{1km}, this proof of non-exponentiality in a 
+\todo{In a next article, this proof of non-exponentiality in a 
 $t$-domain strongly
 dominated by hadronic interactions will be combined with a measurement of 
 elastic scattering in the Coulomb-nuclear interference region, providing strong
 constraints on the phenomenological description of the hadronic phase and of 
-the interference mechanism.
+the interference mechanism.}
 
