--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -281,8 +281,7 @@ Single-RP uncorrelated inefficiency for the far top RP in the left arm. The rapi
 \end{center}
 \end{figure}
 
-Another source of inefficiency are proton interactions in a near RP affecting simultaneously the far RP. The contribution from these near-far correlated inefficiencies, ${\cal I}_{2/4}$, is determined by counting events with corresponding shower signatures and is validated with a Monte-Carlo simulation.
-\todo{explain better, ask Valentina, ref to Hubert's thesis} see section 7.5 in \cite{hubert-thesis}
+Another source of inefficiency are proton interactions in a near RP affecting simultaneously the far RP downstream. The contribution from these near-far correlated inefficiencies, ${\cal I}_{2/4}$, is determined by evaluating the rate of events with high track multiplicity ($\gtrsim$ 5) in both near and far RPs. Events with high track multiplicity simultaneously in a near top and near bottom RP are not counted as such a shower is likely to have started upstream from the RP station and thus unrelated to the elastic proton interacting with detectors. The outcome, ${\cal I}_{2/4} \approx 1.5\un{\%}$, compares well to Monte-Carlo simulations (e.g.~section 7.5 in \cite{hubert-thesis}).
 
 The full correction is calculated as
 \begin{equation}
