--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -50,13 +50,11 @@ $\sqrt s = 8\un{TeV}$ based on a high-statistics data sample obtained with
 the $\beta^* = 90\un{m}$ optics. 
 Both statistical and systematic uncertainties remain below $1\un{\%}$ (except for the contribution from the overall normalisation). This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$.
 %
-Two extended paramterisations, with linear and quadratic polynomials in the exponent, are shown to be well compatible with the data. Using them for differential cross-section extrapolation to $t=0$, 
-%Consequently, the extrapolation to $t=0$ is reviewed, and two extended parameterisations are presented,
-yields via the Optical Theorem total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
+Two extended parametrisations, with linear and quadratic polynomials in the exponent, are shown to be well compatible with the data. Using them for differential cross-section extrapolation to $t=0$, and further applying the Optical Theorem, yields total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
 \end{abstract}
 
 \begin{keyword}
-elastic proton-proton scattering \sep total cross-section \sep LHC \sep TOTEM
+proton-proton interactions \sep elastic scattering \sep total cross-section \sep LHC \sep TOTEM
 \PACS 13.60.Hb % Total and inclusive cross sections (including deep-inelastic processes)
 %\preprint{CERN-PH-EP-2014-XXXX}
 \end{keyword}
@@ -147,12 +145,6 @@ NKTH-OTKA grant 74458 (Hungary).
 	\Name{G.D.~Lafferty~and T.R.~Wyatt}
 	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
 
-\bibitem{1km}
-	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-        Measurement of Elastic pp Scattering at $\sqrt{s}=8\,$TeV in the 
-        Coulomb-Nuclear Interference Region by the TOTEM Experiment at the 
-        CERN LHC, this journal.
-
 \bibitem{hubert-thesis}
 	\Name{Niewiadomski H.}
 	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
@@ -162,6 +154,12 @@ NKTH-OTKA grant 74458 (Hungary).
 	{\tt http://cds.cern.ch/record/1131825}
 
 \iffalse
+
+\bibitem{1km}
+	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
+        Measurement of Elastic pp Scattering at $\sqrt{s}=8\,$TeV in the 
+        Coulomb-Nuclear Interference Region by the TOTEM Experiment at the 
+        CERN LHC, this journal.
 
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
