--- a/2014/90m paper/experimental_apparatus.tex
+++ b/2014/90m paper/experimental_apparatus.tex
@@ -3,7 +3,7 @@
 The TOTEM experiment is located at the LHC interaction point (IP) 5 together 
 with the CMS experiment. In this article only the Roman Pot (RP) system, the 
 sub-detector relevant for elastic scattering measurement, is outlined, 
-whereas TOTEM's full experimental apparatus is described %\linebreak
+whereas TOTEM's full experimental apparatus is described
 elsewhere~\cite{totem-jinst}. 
 RPs are movable beam-pipe
 insertions that approach the LHC beam very closely in order to detect particles scattered to very small angles. They are organised in two stations placed symmetrically around the IP: one on the left side (in LHC sector 45), one on the right (sector 56). Each station is formed by two units: near ($214\un{m}$ from the IP) and far ($220\un{m}$). Each unit includes three RPs: one approaching the beam from the top, one from the bottom and one horizontally. Each RP hosts a stack of 10 silicon strip sensors (pitch $66\un{\mu m}$) with strongly reduced insensitive margin at the edge facing the beam (few tens of micrometres). The sensors are equipped with trigger-capable electronics. Since elastic scattering events consist of two anti-parallel protons, the detected events can have two topologies, called diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
