analysis plots added
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9881 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -1,9 +1,7 @@
-\section{Data taking}
-\label{sec:datataking}
-%
-The results reported here are based on data taken in October 2012 
-in a dedicated LHC proton fill (3216)
-with very special beam properties. The beam optics with $\beta^{*} = 1000\,$m
+\section{Beam optics}
+\label{sec:beam optics}
+
+The beam optics with $\beta^{*} = 1000\,$m
 has been specifically developed for measuring low-$|t|$ elastic scattering.
 Like the previously used $\beta^{*} = 90\,$m optics~\cite{epl96,epl101-el,epl101-tot,prl111},
 this new optics configuration
@@ -26,6 +24,17 @@ A further improvement relative to $\beta^{*} = 90\,$m is the non-vanishing
 effective length in the horizontal plane, $L_{x} = 46.8\,$m at $s = 220\,$m, 
 enabling a better reconstruction of the horizontal component of the 
 scattering angle.
+
+\todo{add formulae for proton transport?}
+\todo{add data table with optical values?}
+
+
+\section{Data taking}
+\label{sec:datataking}
+%
+The results reported here are based on data taken in October 2012 
+in a dedicated LHC proton fill (3216)
+with very special beam properties. 
 
 The vertical RP approach to only $3\,\sigma_{y}$ from the beam centre required
 low beam currents -- two colliding bunch pairs and in each beam one 
@@ -72,11 +81,10 @@ been tagged, respectively.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=16cm]{fig/overview.pdf}
+\includegraphics{fig/overview.pdf}
 \vskip-3mm
 \caption{%
-Illustration of the beam conditions. The T2 rate is roughly proportional to luminosity. The RP rate is sensitive to luminosity plus beam-halo.
-%The pile-up probability follows the intensity of beam-halo protons.
+Beam conditions as a function of time from the beginning of the first data-taking day. The T2 rate is roughly proportional to luminosity, while the RP rate is sensitive to luminosity plus beam-halo. The vertical dashed lines delimit periods of uninterrupted data taking.
 }
 \label{fig:overview}
 \end{center}
