--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -19,13 +19,12 @@
 \def\vec#1{#1} % TODO
 \def\mat#1{\mathsf{#1}}
 \def\etal{et al.}
-\def\todo#1{{\color{red} #1}}
+\def\todo#1{{\color{red}TODO: #1}}
 
 \setbox123\hbox{$0$}
 \setbox124\hbox{$.$}
 \def\S{\hbox to\wd123{\hss}}
 \def\.{\hbox to\wd124{\hss}}
-
 
 \def\hang{\hangindent=\parindent}
 \catcode`\>=11
